...
  @State var cost: String = ""
  @State var description: String = ""
  @State var lon: String = ""
  @State var lat: String = ""
  @State var category: String = ""
  @State var condition: String = ""
  var categoryOptions = ["Camping", "Cleaning", "Gardening", "Hand Tools", "Kitchen", "Outdoor", "Painting", "Power Tools", "Safety", "Miscellaneous"]
  
    var body: some View {
      if showInApp {
        InAppView()
      } else {
      VStack {
        Text("Add a New Tool")
          .font(.largeTitle)
        Form {
          Section(header: Text("Tool information")) {
            TextField("Tool Name", text: $name)
            TextField("Cost Per Hour", text: $cost)
            TextField("Description", text: $description)
              .frame(height: 100.0)
              .lineLimit(3)
            Picker(selection: $selectedCategory, label: Text("Category")) /*@START_MENU_TOKEN@*/{
              Text("Camping").tag(Category.Camping)
              Text("Cleaning").tag(Category.Cleaning)
              Text("Gardening").tag(Category.Gardening)
              Text("Hand Tools").tag(Category.Hand_Tools)
              Text("Kitchen").tag(Category.Kitchen)
              Text("Outdoor").tag(Category.Outdoor)
...
          }
          /*
          Section(header: Text("Location")) {
            TextField("Longitude", text: $lon)
            TextField("Latitude", text: $lat)
          }*/
          Section(header: Text("Condition")) {
            Picker(selection: $selectedCondition, label: Text("Condition")) /*@START_MENU_TOKEN@*/{
              Text("New").tag(Condition.new)
              Text("Great").tag(Condition.great)
              Text("Good").tag(Condition.good)
              Text("Fair").tag(Condition.fair)
              Text("Poor").tag(Condition.poor)
            }/*@END_MENU_TOKEN@*/
          }
          Section(header: Text("Images")) {
            Button(action: {
                            self.isShowPhotoLibrary = true
                        }) {
                            HStack {
                                Image(systemName: "photo")
                                    .font(.system(size: 20))
             
                                Text("Photo library")
                                    .font(.headline)
                            }
                            .frame(minWidth: 0, maxWidth: .infinity, minHeight: 0, maxHeight: 50)
                            .background(Color.blue)
                            .foregroundColor(.white)
                            .cornerRadius(20)
...

          group.notify(queue: .main) {
            self.showInApp = true
          }
          
        }){
          Text("Submit Tool")
        }
        }.sheet(isPresented: $isShowPhotoLibrary) {
          ImagePicker(selectedImage: self.$image, sourceType: .photoLibrary)
      }
      }
    }
...
