...
        if imDoneRes {
          InAppView()
        } else {
        VStack {
            Form {
                Section {
                    DatePicker("Start Date", selection: $startDate, in: Date()..., displayedComponents: .date)
                }
                Section {
                    DatePicker("Start Time", selection: $startDate, in: Date()..., displayedComponents: .hourAndMinute)
                }
                Section {
                    DatePicker("End Date", selection: $endDate, in: Date()..., displayedComponents: .date)
...
                }
                
            }
            Button(action: {
                requestRental(userId:selfData.data.id, startTime:Double(startDate.timeIntervalSinceReferenceDate), endTime:Double(endDate.timeIntervalSinceReferenceDate), toolId: toolId){}
                self.imDoneRes = true
            }) { Text("Request Reservation")
                .frame(minWidth:0, maxWidth:300)
                .background(Color.orange)
                .font(.title)
                .foregroundColor(.white)
                .cornerRadius(40)
            }
...
