//
//  SearchView.swift
//  ToolPool
//
//  CS 130 Group 8
//

import SwiftUI

struct SearchView: View {
    var body: some View {
        Text("Search")
    }
}

struct SearchView_Previews: PreviewProvider {
    static var previews: some View {
        SearchView()
    }
}
